--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -1,7 +1,7 @@
 <header>
-    <a href="/">Nbnb</a>
+    <a href="{% url "core:home" %}"></a>
+    <a href="">Nbnb</a>
     <ul>
-        <li><a href="#">Login</a>
-        </li>
+        <li><a href="#">Login</a></li>
     </ul>
 </header>
