--- a/templates/base.html
+++ b/templates/base.html
@@ -6,12 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>
-        {% block page_name %}{% endblock page_name %}| Nbnb</title>
+        {% block page_title %}{% endblock page_title %}| Nbnb</title>
 </head>
-
 <body>
+    <header>
+        {% include "partials/nav.html" %}
+        {% block search-bar %}
+        <form method="get" action="{% url "rooms:search" %}">
+            <Input  name="city" placeholder="Search By City" />
+        </form>
+        {% endblock search-bar %}
+    </header>
 
-    {% include 'partials/header.html' %}
+    {% include 'partials/nav.html' %}
 
     {% block content %}{% endblock %}
 
