--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -10,7 +10,7 @@ Log In
 
 
 {% block content %}
-    <form method="POST" action="{% url "users:login" %">
+    <form method="POST" action="{% url "users:login" %}">
         {% csrf_token %}
         {{form.as_p}}
         <button>Login</button>
